--- a/index.html
+++ b/index.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>All about me</title>
-    </head>
-    <body>
-        <h1>About Me</h1>
-        <p>I am a passionate senior at the University of Minnesota, majoring in Information Technology Infrastructure with a minor in Computer Science and a Networking certificate. 
-            My background includes hands-on experience as a Data Analyst at Target and as an AWS Cloud Engineer at Amazon, where I developed strong skills in data analysis, cloud support, and technical troubleshooting.</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abreham Getachew - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-        <h1>Technical skills</h1>
-        <p>Python, HTML, CSS, JavaScript, SQL, </p>
-        <h1>Relevant Experience</h1>
-        <ul>
-            <li>
-                AWS Cloud Support Engineer
-            </li>
-            <li>
-                Data Analyst
-            </li>
-        </ul>
-        <h1>List of Projects</h1>
-        <ul>
-            <li>
-                Highly Available Web Application
-            </li>
-            <li>
-                AWSWebApplication Deployment
-            </li>
-            <li>
-                Automated CI/CD Deployment with GitOps
-            </li>
-        </ul>
-        <h1>certification</h1>
-        <ol>
-            <li>
-                AWSCertified Solutions Architect- Associate
-            </li>
-            <li>
-                Certified DevOps Engineer-Professional
-            </li>
-            <li>
-                AWS Cirtified Cloud Practitioning 
-            </li>
-        </ol>
-    </body>
+    <header>
+        <h1>Abreham Getachew</h1>
+        <p>Aspiring Cloud & DevOps Engineer | Full Stack Developer</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Bachelor of Applied Science in ITI - Systems & Computer Science at University of Minnesota.</p>
+        <p>Experienced in AWS, DevOps, and Full Stack Development.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Highly Available Web Application</h3>
+            <p>Deployed a high-availability web app with AWS (EC2, ALB, Auto Scaling, CloudWatch), ensuring uptime and scalability.</p>
+        </div>
+        <div class="project">
+            <h3>Secure Node.js Web Application</h3>
+            <p>Developed a secure, scalable Node.js application with Docker, Kubernetes, and AWS.</p>
+        </div>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="job">
+            <h3>AWS Cloud Support Engineer</h3>
+            <p>Amazon Web Services | May 2024 - August 2024</p>
+            <p>Helped AWS customers troubleshoot and resolve cloud-related issues, cutting downtime by 30%.</p>
+        </div>
+        <div class="job">
+            <h3>Data Analyst</h3>
+            <p>Target | September 2020 - May 2021</p>
+            <p>Developed visual dashboards and cleaned data to improve accuracy by 25%.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:abrehamsemu@gmail.com">abrehamsemu@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/abraham-getachew-81799426b/" target="_blank">My LinkedIn</a></p>
+        <p>GitHub: <a href="https://github.com/aget2101" target="_blank">My GitHub</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Abreham Getachew. All Rights Reserved.</p>
+    </footer>
+
+</body>
 </html>
